<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_min"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:hint="@string/username"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:hint="@string/password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:hint="@string/email"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_label" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="@dimen/width_none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_label"/>

        <RadioButton android:id="@+id/radio_male"
            android:layout_width="@dimen/width_none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female_label"/>
    </RadioGroup>

    <Button
        android:id="@+id/send"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"/>

</LinearLayout>